--- a/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
+++ b/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
@@ -1,116 +1,118 @@
 &lt;div class=&quot;page hankelist-page&quot; id=&quot;page&quot;&gt;
   {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot;&gt;
-    &lt;span class=&quot;float-right&quot;&gt;
-      &lt;a href=&quot;#&quot;&gt;Hankkeiden RSS&lt;/a&gt;
-      &lt;img src=&quot;../../images/favicon_16x16.jpg&quot; alt=&quot;RSS&quot;/&gt;
-    &lt;/span&gt;
-    &lt;h1&gt;
-      Hankkeet
-    &lt;/h1&gt;    
-    &lt;div class=&quot;helptext&quot;&gt;
-      &lt;p&gt;{{description}}&lt;/p&gt;
-    &lt;/div&gt;
-    &lt;div class=&quot;list-lift&quot;&gt;
-      &lt;div class=&quot;navigation&quot;&gt;
-        &lt;div class=&quot;btn-group enlarged&quot;&gt;
-          &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;
-            Vaikuta&lt;span class=&quot;count&quot;&gt;42&lt;/span&gt;
-          &lt;/a&gt;
-          &lt;a href=&quot;#&quot;&gt;Muiden suosimat&lt;/a&gt;
-          &lt;a href=&quot;#&quot;&gt;Viel&Atilde;&curren; ehdit&lt;/a&gt;
-          &lt;a href=&quot;#&quot;&gt;Omat valinnat&lt;/a&gt;
-          &lt;a href=&quot;#&quot;&gt;
-            Tulokset&lt;span class=&quot;count&quot;&gt;172&lt;/span&gt;
-          &lt;/a&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;tag-search-container&quot;&gt;
-          {{&gt; atoms-tagit }}
-        &lt;/div&gt;
+    &lt;div class=&quot;content-item large&quot;&gt;
+      &lt;span class=&quot;float-right&quot;&gt;
+        &lt;a href=&quot;#&quot;&gt;Hankkeiden RSS&lt;/a&gt;
+        &lt;img src=&quot;../../images/favicon_16x16.jpg&quot; alt=&quot;RSS&quot;/&gt;
+      &lt;/span&gt;
+      &lt;h1&gt;
+        Hankkeet
+      &lt;/h1&gt;
+      &lt;div class=&quot;helptext&quot;&gt;
+        &lt;p&gt;{{description}}&lt;/p&gt;
       &lt;/div&gt;
-      &lt;div class=&quot;content-list&quot;&gt;
-        &lt;ul&gt;
-          &lt;li class=&quot;single-list-item&quot;&gt;
-            &lt;ul class=&quot;items-container&quot;&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-count-icon }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-tag-list }}
-              &lt;/li&gt;
-            &lt;/ul&gt;
-          &lt;/li&gt;
-          &lt;li class=&quot;single-list-item&quot;&gt;
-            &lt;ul class=&quot;items-container&quot;&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-count-icon }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-tag-list }}
-              &lt;/li&gt;
-            &lt;/ul&gt;
-          &lt;/li&gt;
-          &lt;li class=&quot;single-list-item&quot;&gt;
-            &lt;ul class=&quot;items-container&quot;&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-count-icon }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-tag-list }}
-              &lt;/li&gt;
-            &lt;/ul&gt;
-          &lt;/li&gt;
-          &lt;li class=&quot;single-list-item&quot;&gt;
-            &lt;ul class=&quot;items-container&quot;&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-count-icon }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-tag-list }}
-              &lt;/li&gt;
-            &lt;/ul&gt;
-          &lt;/li&gt;
-          &lt;li class=&quot;single-list-item&quot;&gt;
-            &lt;ul class=&quot;items-container&quot;&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-count-icon }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-link-and-description }}
-              &lt;/li&gt;
-              &lt;li class=&quot;block-item&quot;&gt;
-                {{&gt; atoms-tag-list }}
-              &lt;/li&gt;
-            &lt;/ul&gt;
-          &lt;/li&gt;
-        &lt;/ul&gt;
+      &lt;div class=&quot;list-lift&quot;&gt;
+        &lt;div class=&quot;navigation&quot;&gt;
+          &lt;div class=&quot;btn-group enlarged&quot;&gt;
+            &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;
+              Vaikuta&lt;span class=&quot;count&quot;&gt;42&lt;/span&gt;
+            &lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;Muiden suosimat&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;Viel&Atilde;&curren; ehdit&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;Omat valinnat&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;
+              Tulokset&lt;span class=&quot;count&quot;&gt;172&lt;/span&gt;
+            &lt;/a&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;tag-search-container&quot;&gt;
+            {{&gt; atoms-tagit }}
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;content-list&quot;&gt;
+          &lt;ul&gt;
+            &lt;li class=&quot;single-list-item&quot;&gt;
+              &lt;ul class=&quot;items-container&quot;&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-count-icon }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-tag-list }}
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;single-list-item&quot;&gt;
+              &lt;ul class=&quot;items-container&quot;&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-count-icon }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-tag-list }}
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;single-list-item&quot;&gt;
+              &lt;ul class=&quot;items-container&quot;&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-count-icon }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-tag-list }}
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;single-list-item&quot;&gt;
+              &lt;ul class=&quot;items-container&quot;&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-count-icon }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-tag-list }}
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+            &lt;li class=&quot;single-list-item&quot;&gt;
+              &lt;ul class=&quot;items-container&quot;&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-count-icon }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-link-and-description }}
+                &lt;/li&gt;
+                &lt;li class=&quot;block-item&quot;&gt;
+                  {{&gt; atoms-tag-list }}
+                &lt;/li&gt;
+              &lt;/ul&gt;
+            &lt;/li&gt;
+          &lt;/ul&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;&lt;!--End role=main--&gt;
