--- a/patterns/04-pages-06-content-landingpage/04-pages-06-content-landingpage.mustache
+++ b/patterns/04-pages-06-content-landingpage/04-pages-06-content-landingpage.mustache
@@ -1,97 +1,99 @@
 &lt;div class=&quot;page content-landingpage&quot; id=&quot;page&quot;&gt;
   {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot;&gt;
-    &lt;h1&gt;
-      Laskeutumissivun otsikko
-    &lt;/h1&gt;
-    &lt;div class=&quot;helptext&quot;&gt;
-      &lt;p&gt;{{description}}&lt;/p&gt;
-    &lt;/div&gt;
-    &lt;div class=&quot;cf&quot;&gt;
-      &lt;div&gt;
-        &lt;div class=&quot;content-item medium  float-left&quot;&gt;
-          &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
-            Poliittinen osallistuminen
-          &lt;/div&gt;
-          &lt;div class=&quot;lift-content&quot;&gt;
-            &lt;div class=&quot;lift-image&quot;&gt;
-              &lt;a href=&quot;#&quot; /&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-text&quot;&gt;
-              Lorem ipsum nostoteksti
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-link&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;content-item medium  float-right&quot;&gt;
-          &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
-            Demokratian ongelmat ja haasteet
-          &lt;/div&gt;
-          &lt;div class=&quot;lift-content&quot;&gt;
-            &lt;div class=&quot;lift-image&quot;&gt;
-              &lt;a href=&quot;#&quot; /&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-text&quot;&gt;
-              Lorem ipsum nostoteksti
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-link&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
+    &lt;div class=&quot;content-item large&quot;&gt;
+      &lt;h1&gt;
+        Laskeutumissivun otsikko
+      &lt;/h1&gt;
+      &lt;div class=&quot;helptext&quot;&gt;
+        &lt;p&gt;{{description}}&lt;/p&gt;
       &lt;/div&gt;
-      
-      &lt;div&gt;
-        &lt;div class=&quot;content-item medium  float-left&quot;&gt;
-          &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
-            Demokratia
+      &lt;div class=&quot;cf&quot;&gt;
+        &lt;div&gt;
+          &lt;div class=&quot;content-item medium  float-left&quot;&gt;
+            &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
+              Poliittinen osallistuminen
+            &lt;/div&gt;
+            &lt;div class=&quot;lift-content&quot;&gt;
+              &lt;div class=&quot;lift-image&quot;&gt;
+                &lt;a href=&quot;#&quot; /&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-text&quot;&gt;
+                Lorem ipsum nostoteksti
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-link&quot;&gt;
+                &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;lift-content&quot;&gt;
-            &lt;div class=&quot;lift-image&quot;&gt;
-              &lt;a href=&quot;#&quot; /&gt;
+          &lt;div class=&quot;content-item medium  float-right&quot;&gt;
+            &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
+              Demokratian ongelmat ja haasteet
             &lt;/div&gt;
-            &lt;div class=&quot;lift-text&quot;&gt;
-              Lorem ipsum nostoteksti
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-link&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+            &lt;div class=&quot;lift-content&quot;&gt;
+              &lt;div class=&quot;lift-image&quot;&gt;
+                &lt;a href=&quot;#&quot; /&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-text&quot;&gt;
+                Lorem ipsum nostoteksti
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-link&quot;&gt;
+                &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;content-item medium  float-right&quot;&gt;
-          &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
-            Edustuksellinen ja suora demokratia
-          &lt;/div&gt;
-          &lt;div class=&quot;lift-content&quot;&gt;
-            &lt;div class=&quot;lift-image&quot;&gt;
-              &lt;a href=&quot;#&quot; /&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-text&quot;&gt;
-              Lorem ipsum nostoteksti
-            &lt;/div&gt;
-            &lt;div class=&quot;lift-link&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-      &lt;/div&gt;
 
-      &lt;div&gt;
-        &lt;div class=&quot;content-item medium  float-left&quot;&gt;
-          &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
-            Demokratiasanasto
+        &lt;div&gt;
+          &lt;div class=&quot;content-item medium  float-left&quot;&gt;
+            &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
+              Demokratia
+            &lt;/div&gt;
+            &lt;div class=&quot;lift-content&quot;&gt;
+              &lt;div class=&quot;lift-image&quot;&gt;
+                &lt;a href=&quot;#&quot; /&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-text&quot;&gt;
+                Lorem ipsum nostoteksti
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-link&quot;&gt;
+                &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;lift-content&quot;&gt;
-            &lt;div class=&quot;lift-image&quot;&gt;
-              &lt;a href=&quot;#&quot; /&gt;
+          &lt;div class=&quot;content-item medium  float-right&quot;&gt;
+            &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
+              Edustuksellinen ja suora demokratia
             &lt;/div&gt;
-            &lt;div class=&quot;lift-text&quot;&gt;
-              Lorem ipsum nostoteksti
+            &lt;div class=&quot;lift-content&quot;&gt;
+              &lt;div class=&quot;lift-image&quot;&gt;
+                &lt;a href=&quot;#&quot; /&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-text&quot;&gt;
+                Lorem ipsum nostoteksti
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-link&quot;&gt;
+                &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/div&gt;
             &lt;/div&gt;
-            &lt;div class=&quot;lift-link&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+
+        &lt;div&gt;
+          &lt;div class=&quot;content-item medium  float-left&quot;&gt;
+            &lt;div class=&quot;lift-header gradient-cyan&quot;&gt;
+              Demokratiasanasto
+            &lt;/div&gt;
+            &lt;div class=&quot;lift-content&quot;&gt;
+              &lt;div class=&quot;lift-image&quot;&gt;
+                &lt;a href=&quot;#&quot; /&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-text&quot;&gt;
+                Lorem ipsum nostoteksti
+              &lt;/div&gt;
+              &lt;div class=&quot;lift-link&quot;&gt;
+                &lt;a href=&quot;#&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
