--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -126,7 +126,7 @@
 .semantic-list{
 	width: 100%;
 	// Sample stuff for responsive version
-	padding: 0 10px;
+	//padding: 0 10px;
 
 	@media #{$laptop}{
 		//width: 30%;
