--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3038,15 +3038,15 @@ td {
 
 /* Fixed sizes */
 .content-item.fixed-small {
-  width: 175px;
+  max-width: 175px;
 }
 
 .content-item.fixed-medium {
-  width: 350px;
+  max-width: 350px;
 }
 
 .content-item.fixed-large {
-  width: 700px;
+  max-width: 700px;
 }
 
 .content-item.small, .tag-list li.content-item {
@@ -3487,7 +3487,6 @@ td {
 
 .semantic-list {
   width: 100%;
-  padding: 0 10px;
 }
 .semantic-list li {
   line-height: 1.5;
