homepage styles fixed

--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -133,7 +133,7 @@
             </h3>
             <span class="select-style">
               <span class="border-fix">
-                <select id="Main_ddlValitsePaikkakunta" class="btn-group">
+                <select id="Main_ddlValitsePaikkakunta" class="btn-group no-margin-bottom">
                   <option selected="selected" value="">---Paikkakunta---</option>
                   <option value="11452">Helsinki</option>
                   <option value="11453">Turku</option>
@@ -141,7 +141,7 @@
                 </select>
               </span>
             </span>
-            <p>Tai</p>
+            <b class="block-element">Tai</b>
             <div class="inline-form search-form">
               <legend class="is-vishidden">Search</legend>
               <div id="pnlHankeSearch" class="form-element" title="Hae asiasanalla..." onkeypress="javascript:return WebForm_FireDefaultButton(event, 'btnHaeHanke')">
