--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -29,6 +29,10 @@
 	width: 100%;
 }
 
+.block-element {
+	display: block;
+}
+
 .inline-element{
 	display: inline-block;
 	margin-bottom: $space-half;
