--- a/public/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
+++ b/public/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
@@ -86,9 +86,9 @@
                   &lt;/li&gt;
                 &lt;/ul&gt;
               &lt;/div&gt;
-              &lt;div&gt;
+              &lt;p class=&quot;read-more&quot;&gt;
                 &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-              &lt;/div&gt;
+              &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
           &lt;div id=&quot;pnlInterestingProjects&quot; class=&quot;content-item large&quot;&gt;
@@ -121,19 +121,19 @@
                 &lt;/ul&gt;
               &lt;/div&gt;
             &lt;/div&gt;
-            &lt;div&gt;
+            &lt;p class=&quot;read-more&quot;&gt;
               &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; kaikki hankkeet &Acirc;&raquo;&lt;/a&gt;
-            &lt;/div&gt;
+            &lt;/p&gt;
           &lt;/div&gt;
         &lt;/section&gt;
         &lt;aside class=&quot;l-sidebar&quot;&gt;
-          &lt;section id=&quot;ProjectSearch&quot; class=&quot;content-item&quot;&gt;
+          &lt;section id=&quot;ProjectSearch&quot; class=&quot;content-item project-search&quot;&gt;
             &lt;h3 class=&quot;section-title&quot;&gt;
               Etsi hankkeita joihin voit osallistua
             &lt;/h3&gt;
             &lt;span class=&quot;select-style&quot;&gt;
               &lt;span class=&quot;border-fix&quot;&gt;
-                &lt;select id=&quot;Main_ddlValitsePaikkakunta&quot; class=&quot;btn-group no-margin-bottom&quot;&gt;
+                &lt;select id=&quot;Main_ddlValitsePaikkakunta&quot; class=&quot;btn-group&quot;&gt;
                   &lt;option selected=&quot;selected&quot; value=&quot;&quot;&gt;---Paikkakunta---&lt;/option&gt;
                   &lt;option value=&quot;11452&quot;&gt;Helsinki&lt;/option&gt;
                   &lt;option value=&quot;11453&quot;&gt;Turku&lt;/option&gt;
