--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -86,9 +86,9 @@
                   </li>
                 </ul>
               </div>
-              <div>
+              <p class="read-more">
                 <a href="#">Näytä lisää</a>
-              </div>
+              </p>
             </div>
           </div>
           <div id="pnlInterestingProjects" class="content-item large">
@@ -121,19 +121,19 @@
                 </ul>
               </div>
             </div>
-            <div>
+            <p class="read-more">
               <a href="#">Näytä kaikki hankkeet »</a>
-            </div>
+            </p>
           </div>
         </section>
         <aside class="l-sidebar">
-          <section id="ProjectSearch" class="content-item">
+          <section id="ProjectSearch" class="content-item project-search">
             <h3 class="section-title">
               Etsi hankkeita joihin voit osallistua
             </h3>
             <span class="select-style">
               <span class="border-fix">
-                <select id="Main_ddlValitsePaikkakunta" class="btn-group no-margin-bottom">
+                <select id="Main_ddlValitsePaikkakunta" class="btn-group">
                   <option selected="selected" value="">---Paikkakunta---</option>
                   <option value="11452">Helsinki</option>
                   <option value="11453">Turku</option>
