anonymous and loggedin user homepage drafts

--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -3,7 +3,12 @@
 	<div class="element-group">
 		<!-- Use mobile trigger (molecules-responsive-dropdown) here to keep it in place when menus are open. -->
 		{{> atoms-mobile-nav-trigger }}
-		{{> molecules-login }}
+		{{#loggedin}}
+			{{> molecules-loggedin }}
+		{{/loggedin}}
+		{{^loggedin}}
+			{{> molecules-login }}			
+		{{/loggedin}}		
 	</div>
 	<section class="responsive-modifier-block">
 		{{> molecules-search }}
