--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -1,189 +1,191 @@
 <div class="page" id="page">
-  {{> organisms-header }}
+    {{> organisms-header }}
   <div role="main">
-    <section class="main">
-      {{> molecules-carousel }}
+      <section class="main">
+          {{> molecules-carousel }}
       <section class="l-two-col">
-        <section class="l-main">
-          <div id="pnlFollowedProjects" class="content-item large">
-            <h3 class="section-title">
-              Seuraamani kohteet
+          <section class="l-main">
+            {{#loggedin}}
+            <div id="pnlFollowedProjects" class="content-item large">
+            <h3 class="section-title">Seuraamani kohteet
             </h3>
             <div class="list-lift">
-              <div class="content-list">
-                <ul>
-                  <li class="single-list-item">
-                    <ul class="items-container">
-                      <!--<li class="block-item">
-                        <div class="lad">
-                          <a href="#">Lorem ipsum</a>
-                          <p class="description">test</p>
-                        </div>
-                      </li>-->
-                      <li class="block-item">
-                        <div class="count-container">
-                          <span class="icon-span icon-comment"></span>
-                          <a href="//www.foo.bar">0</a>
-                        </div>
-                      </li>
-                      <li class="block-item">
-                        <div class="lad">
-                          <a href="#">Lorem ipsum hanke</a>
-                          <p class="description">
-                            <a href="#">LoremIpsumChat</a> chatissa on vielä tilaa.
-                          </p>
-                        </div>
-                      </li>
+                <div class="content-list">
+                    <ul>
+                        <li class="single-list-item">
+                            <ul class="items-container">
+                                <!--<li class="block-item">
+                    <div class="lad">
+                        <a href="#">Lorem ipsum</a>
+                        <p class="description">test</p>
+                    </div>
+                    </li>-->
+                                <li class="block-item">
+                                    <div class="count-container">
+                                        <span class="icon-span icon-comment"></span>
+                                        <a href="//www.foo.bar">0</a>
+                                    </div>
+                                </li>
+                                <li class="block-item">
+                                    <div class="lad">
+                                        <a href="#">Lorem ipsum hanke</a>
+                                        <p class="description">
+                                            <a href="#">LoremIpsumChat</a> chatissa on vielä tilaa.
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="single-list-item">
+                            <ul class="items-container">
+                                <!--<li class="block-item">
+                    <div class="lad">
+                        <a href="#">Lorem ipsum</a>
+                        <p class="description">test</p>
+                    </div>
+                    </li>-->
+                                <li class="block-item">
+                                    <div class="count-container">
+                                        <span class="icon-span icon-comment"></span>
+                                        <a href="//www.foo.bar">22</a>
+                                    </div>
+                                </li>
+                                <li class="block-item">
+                                    <div class="lad">
+                                        <a href="#">Lorem ipsum hanke</a>
+                                        <p class="description">
+                                            22 henkilöä osallistunut chattiin <a href="">Lorem lipsum chat#2</a>
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="single-list-item">
+                            <ul class="items-container">
+                                <!--<li class="block-item">
+                    <div class="lad">
+                        <a href="#">Lorem ipsum</a>
+                        <p class="description">test</p>
+                    </div>
+                    </li>-->
+                                <li class="block-item">
+                                    <div class="count-container">
+                                        <span class="icon-span icon-comment"></span>
+                                        <a href="//www.foo.bar">48</a>
+                                    </div>
+                                </li>
+                                <li class="block-item">
+                                    <div class="lad">
+                                        <a href="">Lorem lipsum hanke#3</a>
+                                        <p class="description">
+                                            48 henkilöä osallistui chattiin <a href="">Lorem lipsum chat#3</a>
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
-                  </li>
-                  <li class="single-list-item">
-                    <ul class="items-container">
-                      <!--<li class="block-item">
-                        <div class="lad">
-                          <a href="#">Lorem ipsum</a>
-                          <p class="description">test</p>
-                        </div>
-                      </li>-->
-                      <li class="block-item">
-                        <div class="count-container">
-                          <span class="icon-span icon-comment"></span>
-                          <a href="//www.foo.bar">22</a>
-                        </div>
-                      </li>
-                      <li class="block-item">
-                        <div class="lad">
-                          <a href="#">Lorem ipsum hanke</a>
-                          <p class="description">
-                            22 henkilöä osallistunut chattiin <a href="">Lorem lipsum chat#2</a>
-                          </p>
-                        </div>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="single-list-item">
-                    <ul class="items-container">
-                      <!--<li class="block-item">
-                        <div class="lad">
-                          <a href="#">Lorem ipsum</a>
-                          <p class="description">test</p>
-                        </div>
-                      </li>-->
-                      <li class="block-item">
-                        <div class="count-container">
-                          <span class="icon-span icon-comment"></span>
-                          <a href="//www.foo.bar">48</a>
-                        </div>
-                      </li>
-                      <li class="block-item">
-                        <div class="lad">
-                          <a href="">Lorem lipsum hanke#3</a>
-                          <p class="description">
-                            48 henkilöä osallistui chattiin <a href="">Lorem lipsum chat#3</a>
-                          </p>
-                        </div>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-              <p class="read-more">
-                <a href="#">Näytä lisää</a>
-              </p>
+                </div>
+                <p class="read-more">
+                    <a href="#">Näytä lisää</a>
+                </p>
             </div>
-          </div>
-          <div id="pnlInterestingProjects" class="content-item large">
-            <h3 class="section-title">
-              Kiinnostavia hankkeita
-            </h3>
-            <div class="list-lift">
-              <div class="content-list">
-                <ul>
-                  <li class="single-list-item">
-                    <ul class="items-container">
-                      <li class="block-item">
-                        <div class="lad">
-                          <a href="#">Toinen Lorem ipsum hanke</a>
-                          <p class="description">Lorem ipsum kuvausta tähän</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="single-list-item">
-                    <ul class="items-container">
-                      <li class="block-item">
-                        <div class="lad">
-                          <a href="#">Kolmas Lorem ipsum hanke</a>
-                          <p class="description">Lorem ipsum kuvausta tähän</p>
-                        </div>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
             </div>
-            <p class="read-more">
-              <a href="#">Näytä kaikki hankkeet »</a>
-            </p>
-          </div>
-        </section>
-        <aside class="l-sidebar">
-          <section id="ProjectSearch" class="content-item project-search">
-            <h3 class="section-title">
-              Etsi hankkeita joihin voit osallistua
-            </h3>
-            <span class="select-style">
-              <span class="border-fix">
-                <select id="Main_ddlValitsePaikkakunta" class="btn-group">
-                  <option selected="selected" value="">---Paikkakunta---</option>
-                  <option value="11452">Helsinki</option>
-                  <option value="11453">Turku</option>
-                  <option value="11453">Tampere</option>
-                </select>
-              </span>
-            </span>
-            <b class="block-element">Tai</b>
-            <div class="inline-form search-form">
-              <legend class="is-vishidden">Search</legend>
-              <div id="pnlHankeSearch" class="form-element" title="Hae asiasanalla..." onkeypress="javascript:return WebForm_FireDefaultButton(event, 'btnHaeHanke')">
-                <label for="btnHaeHanke" class="is-vishidden">Hae asiasanalla</label>
-                <input name="ctl00$Main$btnHaeHanke" type="search" placeholder="Hae asiasanalla..." maxlength="300" id="btnHaeHanke" tabindex="10" class="text-quicksearch search-field ctl-text ellipsis" autocomplete="off" />
-                <input type="submit" name="ctl00$Main$btnHaeHanke" value="" id="Main_btnHaeHanke" class="button-quicksearch" />
-                <i class="icon-search"></i>
-              </div>
+            <div id="pnlInterestingProjects" class="content-item large">
+                <h3 class="section-title">Kiinnostavia hankkeita
+                </h3>
+                <div class="list-lift">
+                    <div class="content-list">
+                        <ul>
+                            <li class="single-list-item">
+                                <ul class="items-container">
+                                    <li class="block-item">
+                                        <div class="lad">
+                                            <a href="#">Toinen Lorem ipsum hanke</a>
+                                            <p class="description">Lorem ipsum kuvausta tähän</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="single-list-item">
+                                <ul class="items-container">
+                                    <li class="block-item">
+                                        <div class="lad">
+                                            <a href="#">Kolmas Lorem ipsum hanke</a>
+                                            <p class="description">Lorem ipsum kuvausta tähän</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <p class="read-more">
+                    <a href="#">Näytä kaikki hankkeet »</a>
+                </p>
             </div>
+            {{/loggedin}}
+            {{^loggedin}}
+            Anonyymikäyttäjän sisältöä
+            {{/loggedin}}
           </section>
-          <section id="ExternalRss" class="content-item">
-            <div class="semantic-list">
-              <h3 class="section-title">
-                Ajankohtaista
-              </h3>
-              <ol>
-                <li>
-                  <a href="http://blogi.otakantaa.fi/blogi/nuorten-osallisuus-verkossa-ja-valtionhallinnossa/" target="_blank">Nuorten osallisuus verkossa ja valtionhallinnossa</a>
-                  <p class="date">
-                    8.4.2014 Blogi.otakantaa.fi
-                  </p>
-                </li>
-                <li>
-                  <a href="http://blogi.otakantaa.fi/blogi/nettiaanestamisen-mahdollisuuksista-keskustellaan-otakantaa-fi-sivustolla/" target="_blank">Nettiäänestämisen mahdollisuuksista keskustellaan otakantaa.fi-sivustolla</a>
-                  <p class="date">
-                    3.4.2014 Blogi.otakantaa.fi
-                  </p>
-                </li>
-                <li>
-                  <a href="http://blogi.otakantaa.fi/blogi/syke-tarkkailijasta-ja-haravasta-demokratian-tyokaluja/" target="_blank">SYKE: Tarkkailijasta ja Haravasta demokratian työkaluja</a>
-                  <p class="date">
-                    4.3.2014 Blogi.otakantaa.fi
-                  </p>
-                </li>
-              </ol>
-            </div>
-          </section>
-        </aside>
+          <aside class="l-sidebar">
+              <section id="ProjectSearch" class="content-item project-search">
+                  <h3 class="section-title">Etsi hankkeita joihin voit osallistua
+                  </h3>
+                  <span class="select-style">
+                      <span class="border-fix">
+                          <select id="Main_ddlValitsePaikkakunta" class="btn-group">
+                              <option selected="selected" value="">---Paikkakunta---</option>
+                              <option value="11452">Helsinki</option>
+                              <option value="11453">Turku</option>
+                              <option value="11453">Tampere</option>
+                          </select>
+                      </span>
+                  </span>
+                  <b class="block-element">Tai</b>
+                  <div class="inline-form search-form">
+                      <legend class="is-vishidden">Search</legend>
+                      <div id="pnlHankeSearch" class="form-element" title="Hae asiasanalla..." onkeypress="javascript:return WebForm_FireDefaultButton(event, 'btnHaeHanke')">
+                          <label for="btnHaeHanke" class="is-vishidden">Hae asiasanalla</label>
+                          <input name="ctl00$Main$btnHaeHanke" type="search" placeholder="Hae asiasanalla..." maxlength="300" id="btnHaeHanke" tabindex="10" class="text-quicksearch search-field ctl-text ellipsis" autocomplete="off" />
+                          <input type="submit" name="ctl00$Main$btnHaeHanke" value="" id="Main_btnHaeHanke" class="button-quicksearch" />
+                          <i class="icon-search"></i>
+                      </div>
+                  </div>
+              </section>
+              <section id="ExternalRss" class="content-item">
+                  <div class="semantic-list">
+                      <h3 class="section-title">Ajankohtaista
+                      </h3>
+                      <ol>
+                          <li>
+                              <a href="http://blogi.otakantaa.fi/blogi/nuorten-osallisuus-verkossa-ja-valtionhallinnossa/" target="_blank">Nuorten osallisuus verkossa ja valtionhallinnossa</a>
+                              <p class="date">
+                                  8.4.2014 Blogi.otakantaa.fi
+                              </p>
+                          </li>
+                          <li>
+                              <a href="http://blogi.otakantaa.fi/blogi/nettiaanestamisen-mahdollisuuksista-keskustellaan-otakantaa-fi-sivustolla/" target="_blank">Nettiäänestämisen mahdollisuuksista keskustellaan otakantaa.fi-sivustolla</a>
+                              <p class="date">
+                                  3.4.2014 Blogi.otakantaa.fi
+                              </p>
+                          </li>
+                          <li>
+                              <a href="http://blogi.otakantaa.fi/blogi/syke-tarkkailijasta-ja-haravasta-demokratian-tyokaluja/" target="_blank">SYKE: Tarkkailijasta ja Haravasta demokratian työkaluja</a>
+                              <p class="date">
+                                  4.3.2014 Blogi.otakantaa.fi
+                              </p>
+                          </li>
+                      </ol>
+                  </div>
+              </section>
+          </aside>
       </section>
-      <div class="clear">
-      </div>
-    </section>
-  </div><!--End role=main-->
-  {{> organisms-footer }}
+          <div class="clear">
+          </div>
+      </section>
+  </div>
+    <!--End role=main-->
+    {{> organisms-footer }}
 </div>
