--- a/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
+++ b/patterns/04-pages-05-hankelist-page/04-pages-05-hankelist-page.mustache
@@ -1,4 +1,4 @@
-&lt;div class=&quot;page hankelist-page&quot; id=&quot;page&quot;&gt;
+&lt;div class=&quot;page otakantaa&quot; id=&quot;page&quot;&gt;
   {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot;&gt;
     &lt;div class=&quot;content-item large&quot;&gt;
