--- a/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
+++ b/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
@@ -1,4 +1,4 @@
-&lt;div class=&quot;page&quot; id=&quot;page&quot;&gt;
+&lt;div class=&quot;page otakantaa&quot; id=&quot;page&quot;&gt;
     {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot;&gt;
       &lt;section class=&quot;main&quot;&gt;
