--- a/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
+++ b/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
@@ -1,4 +1,4 @@
-&lt;div class=&quot;page hankesivu-edit-mode&quot; id=&quot;page&quot;&gt;
+&lt;div class=&quot;page otakantaa&quot; id=&quot;page&quot;&gt;
   {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot; class=&quot;edit-hanke-form&quot;&gt;
     &lt;h1&gt;Muokkaa hanketta&lt;/h1&gt;
