--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -5,7 +5,7 @@
       <div>
         <div class="hanke-img-container">
           <img src="../../images/fpo_16x9.png" alt="Taustakuva" class="hanke-bg" />
-          <img src="../../images/logo.png" alt="Logo" class="hanke-logo" />
+          <img src="../../images/fpo_avatar.png" alt="Logo" class="hanke-logo" />
         </div>
         <div class="admin-tools">
           <input class="btn" type="submit" value="Muokkaa perustietoja" />
