--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -34,41 +34,53 @@
 	max-height: 750px;
 	min-height: 175px;
 	position: relative;
-}
 
-.hanke-bg {
-	width: 100%;
-	height: 100%;
-}
-.hanke-logo {
-	position: absolute;
-	left: auto;
-	margin-left: 1em;
-	bottom: 1em;
-	width: 5em;
-	height: 5em;
+	.hanke-bg {
+		width: 100%;
+		height: 100%;
+	}
+	.hanke-logo {
+		position: absolute;
+		left: auto;
+		margin-left: 1em;
+		bottom: 1em;
+		width: 5em;
+		height: 5em;
 	
-	@media #{$tablet}{
-		width: 8em;
-		height: 8em;
-		margin-left: 2em;
-		bottom: 2em;
+		@media #{$tablet}{
+			width: 8em;
+			height: 8em;
+			margin-left: 2em;
+			bottom: 2em;
+		}
+
+		@media #{$laptop}{
+			width: 10em;
+			height: 10em;
+			margin-left: 2em;
+			bottom: 2em;
+		}
+
+		@media #{$desktop}{
+			width: 10em;
+			height: 10em;
+			margin-left: 2em;
+			bottom: 2em;
+		}
 	}
 
-	@media #{$laptop}{
-		width: 10em;
-		height: 10em;
-		margin-left: 2em;
-		bottom: 2em;
+	.edit-bg {
+		position: absolute;
+		bottom: 1em;
+		right: 1em;
 	}
-
-	@media #{$desktop}{
-		width: 10em;
-		height: 10em;
-		margin-left: 2em;
+	.edit-logo {
+		position: absolute;
 		bottom: 2em;
+		left: 2em;
 	}
 }
+
 .admin-tools {
 	text-align: left;
 }
