--- a/source/css/style.css
+++ b/source/css/style.css
@@ -3107,13 +3107,11 @@ td {
   min-height: 175px;
   position: relative;
 }
-
-.hanke-bg {
+.hanke-img-container .hanke-bg {
   width: 100%;
   height: 100%;
 }
-
-.hanke-logo {
+.hanke-img-container .hanke-logo {
   position: absolute;
   left: auto;
   margin-left: 1em;
@@ -3122,7 +3120,7 @@ td {
   height: 5em;
 }
 @media screen and (min-width: 48em) {
-  .hanke-logo {
+  .hanke-img-container .hanke-logo {
     width: 8em;
     height: 8em;
     margin-left: 2em;
@@ -3130,7 +3128,7 @@ td {
   }
 }
 @media screen and (min-width: 60em) {
-  .hanke-logo {
+  .hanke-img-container .hanke-logo {
     width: 10em;
     height: 10em;
     margin-left: 2em;
@@ -3138,12 +3136,22 @@ td {
   }
 }
 @media screen and (min-width: 80em) {
-  .hanke-logo {
+  .hanke-img-container .hanke-logo {
     width: 10em;
     height: 10em;
     margin-left: 2em;
     bottom: 2em;
   }
+}
+.hanke-img-container .edit-bg {
+  position: absolute;
+  bottom: 1em;
+  right: 1em;
+}
+.hanke-img-container .edit-logo {
+  position: absolute;
+  bottom: 2em;
+  left: 2em;
 }
 
 .admin-tools {
